--- a/src/app/components/preview-appl/preview-appl.component.html
+++ b/src/app/components/preview-appl/preview-appl.component.html
@@ -2,6 +2,15 @@
 
 <div class="mainCont">
   <div class="section">
+    <h3>Personal Details</h3>
+    <p>Name: {{ data.name }}</p>
+    <p>Gender: {{ data.gender }}</p>
+    <p>Phone: {{ data.phone }}</p>
+    <p>Admission Number: {{ data.admNo }}</p>
+    <p>Course: {{ data.course }}</p>
+    <p>Form/Year: {{ data.formYear }}</p>
+  </div>
+  <div class="section">
     <h3>Family Details</h3>
     <p>Father's Name: {{ data.fatherName }}</p>
     <p>Father's Occupation: {{ data.fatherOccupation }}</p>
